k8s/overlays/pages-manager-preview/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pages-gateway
  namespace: pages-system
spec:
  template:
    spec:
      imagePullSecrets:
        - name: acr-credential-secret-aggregation
      containers:
        - name: pages-gateway
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pages-worker
  namespace: pages-system
spec:
  template:
    spec:
      imagePullSecrets:
        - name: acr-credential-secret-aggregation
      containers:
        - name: pages-worker
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-agent
  namespace: pages-system
spec:
  template:
    spec:
      imagePullSecrets:
        - name: acr-credential-secret-aggregation
      containers:
        - name: slack-agent
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-notifier
  namespace: pages-system
spec:
  template:
    spec:
      imagePullSecrets:
        - name: acr-credential-secret-aggregation
      containers:
        - name: slack-notifier
          imagePullPolicy: Always
